# Resa

./: .gitignore  main.py  pyproject.toml
recipes/DeepSeek-R1-Distill-Qwen-1.5B/sft/: model_curated_still.yaml
recipes/accelerate_ds_cfgs/: ds_zero2.yaml
resa/post_train_hf/: preprocess.py  sft.py
scripts/set/: prepare.sh  run_download_model_sae.py  set_vars.sh
scripts/train/: finetune_sae.sh  post_train_sft.sh  sae_tuning.sh
