[project]
name = "resa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.6.0",
    "huggingface-hub[cli,hf-transfer,hf-xet]>=0.33.0",
    "ipython>=9.3.0",
    "sparsify",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.52.4",
    "wandb>=0.20.1",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[tool.uv.sources]
sparsify = { path = "resa/sae/sparsify", editable = true }
