[project]
name = "resa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bitsandbytes>=0.46.0",
    "datasets>=3.6.0",
    "deepspeed>=0.17.1",
    "huggingface-hub[cli,hf-transfer]>=0.33.0",
    "ipython>=9.3.0",
    "peft>=0.15.2",
    "sparsify",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.52.4",
    "trl>=0.19.0",
    "wandb>=0.20.1",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[tool.uv.sources]
sparsify = { path = "resa/sae/sparsify", editable = true }
